# ev-filecoin-ffi

./: .gitignore  .gitmodules  .install-filcrypto.swp  CMakeLists.txt  Makefile  README.md  bls.go  build.sh  distributed.go  filcrypto.yml  go.mod  go.sum  install-filcrypto  proofs.go  types.go  workflows.go
.circleci/: config.yml
cmake/modules/share/modules/cmake/: CMConfig.cmake
include/: filcrypto.h
libs/rust-fil-proofs/: Cargo.toml
libs/rust-fil-proofs/src/util/: api.rs
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/scripts/: build-release.sh  package-release.sh
rust/src/bls/: api.rs
rust/src/proofs/: api.rs  helpers.rs
rust/src/util/: api.rs
src/bls/: api.cpp  types.cpp
src/proofs/: api.cpp
