[package]
name = "filcrypto"
description = "FFI Interface to Filecoin Proofs"
version = "0.7.5"
authors = ["laser <l@s3r.com>", "Mikhail Komarov <nemo@nil.foundation>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nilfoundation/filecoin-ffi"
readme = "README.md"
edition = "2018"
publish = false

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
bls-signatures = { git = "https://github.com/nilfoundation/crusty3-bls", version = "0.6.0" }
byteorder = "1.2"
drop_struct_macro_derive = "0.4.0"
ff = { git = "https://github.com/nilfoundation/crusty3-ff.git", rev = "6c3e204", package = "fff", features = ["derive"] }
ffi-toolkit = "0.4.0"
libc = "0.2.58"
log = "0.4.7"
paired = { git = "https://github.com/nilfoundation/crusty3-pairing", version = "0.20.0" }
fil_logger = "0.1.0"
rand = "0.7"
rand_chacha = "0.2.1"
rayon = "1.2.1"
anyhow = "1.0.23"
bellperson = { git = "ssh://git@github.com/nilfoundation/crusty3-zk.git", branch = "master", features = ["gpu"] }
serde_json = "1.0.46"
filecoin-proofs-api = { git = "ssh://git@github.com/nilfoundation/rust-filecoin-proofs-api.git", branch = "master" }
rust-gpu-tools = { version = "0.1.1" }
thread_binder = "0.1.0"
num_cpus = { version = "1" }

neptune = { git = "https://github.com/nilfoundation/crusty3-neptune", branch = "master", features = ["gpu"] }
neptune-triton = { git = "https://github.com/nilfoundation/crusty3-neptune-triton", version = "1.1.3" }

[build-dependencies]
cbindgen = "= 0.14.0"

[dev-dependencies]
tempfile = "3.0.8"
